tests/compile_errors/selective-import.buzz
// `assert` is not defined
import print from "buzz:std";

test "Should not be able to use anything else from std" {
    assert(false);
}
